--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-validator": "^6.14.2",
     "gerador-validador-cpf": "^5.0.2",
     "http-errors": "~1.6.3",
     "install": "^0.13.0",
